--- a/ApiSandbox/Pages/Shared/_Layout.cshtml
+++ b/ApiSandbox/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""  asp-page="/Chat">Chat</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
