--- a/ApiSandbox/Pages/Shared/_Layout.cshtml
+++ b/ApiSandbox/Pages/Shared/_Layout.cshtml
@@ -25,13 +25,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Books/Index">Books</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""  asp-page="/Chat">Chat</a>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
+                  
                 </div>
             </div>
         </nav>
