--- a/ApiSandbox/Pages/_ViewImports.cshtml
+++ b/ApiSandbox/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using AspNetSandbox
-@namespace AspNetSandbox.Pages
+﻿@using ApiSandbox
+@namespace ApiSandbox.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
