--- a/ApiSandbox/Pages/Books/Delete.cshtml
+++ b/ApiSandbox/Pages/Books/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model ApiSandbox.Models.Book
+﻿@page
+@model ApiSandbox.Pages.Shared.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,28 +13,28 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.Book.Title)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.Book.Title)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Author)
+            @Html.DisplayNameFor(model => model.Book.Author)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Author)
+            @Html.DisplayFor(model => model.Book.Author)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Language)
+            @Html.DisplayNameFor(model => model.Book.Language)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Language)
+            @Html.DisplayFor(model => model.Book.Language)
         </dd>
     </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+    
+    <form method="post">
+        <input type="hidden" asp-for="Book.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-page="./Index">Back to List</a>
     </form>
 </div>
