Post working PROPERLY + price added to books modal

--- a/ApiSandbox/Pages/Books/Index.cshtml
+++ b/ApiSandbox/Pages/Books/Index.cshtml
@@ -47,3 +47,7 @@
         }
     </tbody>
 </table>
+@section scripts {
+    <script src="~/lib/microsoft-signalr/signalr.js"></script>
+    <script src="~/js/books.js"></script>
+}
