--- a/ApiSandbox/Pages/Books/Create.cshtml
+++ b/ApiSandbox/Pages/Books/Create.cshtml
@@ -35,10 +35,11 @@
     </div>
 </div>
 
+@section scripts {
+    <script src="~/lib/microsoft-signalr/signalr.js"></script>
+    <script src="~/js/books.js"></script>
+}
+
 <div>
     <a asp-page="Index">Back to List</a>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
